--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,7 @@ textarea {
   border-top: 1px dashed #000000;
 }
 
+/* I'm not actually using these following 3 classes, instead setting the default to green and then changing to two colors when necessary */
 .past {
   background-color: #d3d3d3;
   color: white;
